# MangaZap

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  backend_error.txt
backend/app/: main.py
backend/app/api/: chat.py  config.py  error_reports.py  generate.py  image.py  models.py  projects.py  templates.py  upload.py  video.py  voice.py
backend/app/core/: defaults.py  error_reporter.py  platform.py  security.py  task_manager.py  template_manager.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  image_generator.py  project_store.py  script_generator.py  storyboard.py  tts.py  video_composer.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ApiKeyModal.tsx  ChatInput.tsx  ChatPanel.tsx  DialoguePanel.tsx  ErrorReportButton.tsx  ErrorToast.tsx  FileUploader.tsx  Footer.tsx  HeroSection.tsx  ImageConfirmModal.tsx  KeyElementsCardView.tsx  KeyElementsPanel.tsx  KeyElementsViewer.tsx  ModelSelector.tsx  NarrationPanel.tsx  Navbar.tsx  OptimizedPromptPanel.tsx  OptionCard.tsx  ParticleBackground.tsx  ProjectGrid.tsx  SceneCard.tsx  ScriptDraft.tsx  Sidebar.tsx  SkillShowcase.tsx  StoryboardCardView.tsx  ThreeScenes.tsx  VoiceTrackStrip.tsx  WizardOptions.tsx  WorkspaceNav.tsx
frontend/src/config/: defaults.ts  wizardSteps.ts
frontend/src/hooks/: useApi.ts  (+2 more)
tests/: test_platform.py
(+13 files in other folders)
